--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       <option data-content='<span class="flag-icon flag-icon-fr"></span>'>Français</option>
     </select>
     <a class="nav-link text-muted subheading" href="/website">LASTIG</a>
-    <a class="nav-link text-muted subheading" href="/geovis">GEOVIS</a>
+    <a class="nav-link text-muted subheading" href="/strudel">STRUDEL</a>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Guillaume Touya</span>
+      <span class="d-block d-lg-none">Sébastien Giordano</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/touya.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/giordano.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,24 +93,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Guillaume
-          <span class="text-primary">Touya</span>
+        <h1 class="mb-0">Sébastien
+          <span class="text-primary">Giordano</span>
         </h1>
         <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 62 37 ·
-          <a>guil<!--anti@spam.fr!-->laume.touya@ign.fr</a>
+          <a>seb<!--anti@spam.fr!-->astien.giordano@ign.fr</a>
         </div>
-        <p class="lead mb-5 lang-en">Senior researcher in GI Science, geovisualization, and map generalization. Vice-head of LASTIG lab.</p>
-        <p class="lead mb-5 lang-en">Member of the <a href="">GEOVIS</a> research team</p>
-        <p class="lead mb-5 lang-fr">Directeur de recherche IGN en sciences de l'information géographique, géovisualisation, et généralisation cartographique. Directeur adjoint du LASTIG.</p>
-        <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">GEOVIS</a></p>
+        <p class="lead mb-5 lang-en">Researcher in Remote Sensing and Photogrammetry..</p>
+        <p class="lead mb-5 lang-en">Member of the <a href="">STRUDEL</a> research team</p>
+        <p class="lead mb-5 lang-fr">Chargé de recherche en Télédétection et Photogrammétrie.</p>
+        <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">STRUDEL</a></p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://www.researchgate.net/profile/Guillaume_Touya">
+          <a href="https://www.researchgate.net/profile/Sebastien_Giordano">
             <i class="ai ai-researchgate"></i>
           </a>
-          <a href="https://github.com/gtouya">
+          <a href="https://github.com/sebgiordano/">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
@@ -119,7 +119,7 @@
           <a href="#">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://scholar.google.fr/citations?user=Cbc_R2IAAAAJ">
+          <a href="https://scholar.google.fr/citations?user=IOPxYVgAAAAJ">
             <i class="ai ai-google-scholar"></i>
           </a>
           <a href="#">
