--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
         <p class="lead mb-5 lang-fr">Chargé de recherche en Télédétection et Photogrammétrie.</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">STRUDEL</a></p>
         <div class="social-icons">
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-linkedin-in"></i>
-          </a>
+          </a>-->
           <a href="https://www.researchgate.net/profile/Sebastien_Giordano">
             <i class="ai ai-researchgate"></i>
           </a>
           <a href="https://github.com/sebgiordano/">
             <i class="fab fa-github"></i>
-          </a>
+           <!--</a>
           <a href="#">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
+          </a>-->
+           <!--<a href="#">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a>-->
           <a href="https://scholar.google.fr/citations?user=IOPxYVgAAAAJ">
             <i class="ai ai-google-scholar"></i>
           </a>
-          <a href="#">
+           <!--<a href="#">
             <i class="ai ai-publons"></i>
-          </a>
-          <a href="#">
+          </a>-->
+          <a href="https://orcid.org/0000-0001-9408-3334">
             <i class="ai ai-orcid"></i>
           </a>
           <a href="#">
