--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body id="page-top" onload="reviewingVis('reviewing.json'); getPublicationsAuthor('guillaume-touya');">
+<body id="page-top" onload="reviewingVis('reviewing.json'); getPublicationsAuthor('sebastien-giordano');">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <select class="selectpicker" data-width="fit">
@@ -58,13 +58,14 @@
           <a class="nav-link js-scroll-trigger lang-fr" href="#about">Présentation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger lang-en" href="#interest">Research Interests</a>
-          <a class="nav-link js-scroll-trigger lang-fr" href="#interest">Sujets de recherche</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#news">News</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#news">Actualités</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger lang-en" href="#interest">Research Interests</a>
+          <a class="nav-link js-scroll-trigger lang-fr" href="#interest">Sujets de recherche</a>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#experience">Experience</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#experience">Parcours professionnel</a>
@@ -96,11 +97,11 @@
         <h1 class="mb-0">Sébastien
           <span class="text-primary">Giordano</span>
         </h1>
-        <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 62 37 ·
+        <div class="subheading mb-5">73 avenue de Paris · 94165 Saint-Mandé CEDEX · (+33)1 43 98 80 00 · 71 77 ·
           <a>seb<!--anti@spam.fr!-->astien.giordano@ign.fr</a>
         </div>
         <p class="lead mb-5 lang-en">Researcher in Remote Sensing and Photogrammetry..</p>
-        <p class="lead mb-5 lang-en">Member of the <a href="">STRUDEL</a> research team</p>
+        <p class="lead mb-5 lang-en">Member of the <a href="http://umrlastig.github.io/strudel">STRUDEL</a> research team</p>
         <p class="lead mb-5 lang-fr">Chargé de recherche en Télédétection et Photogrammétrie.</p>
         <p class="lead mb-5 lang-fr">Membre de l'équipe <a href="">STRUDEL</a></p>
         <div class="social-icons">
@@ -128,9 +129,9 @@
           <a href="https://orcid.org/0000-0001-9408-3334">
             <i class="ai ai-orcid"></i>
           </a>
-          <a href="#">
+          <!--<a href="#">
             <i class="ai"><img src="img/icons/hal-b2.svg" width=45px/></i>
-          </a>
+          </a>-->
         </div>
       </div>
     </section>
@@ -143,7 +144,7 @@
         <h2 class="mb-5 lang-fr">Sujets de recherche</h2>
         <hr class="star-dark mb-5">
         <div class="row">
-          <article class="col-md-6 col-lg-4">
+          <!--<article class="col-md-6 col-lg-4">
 								<div class="portfolio-item d-block mx-auto">
 									<img class="img-fluid" src="img/generalisation.png" alt="" />
 									<div class="portfolio-desc d-flex align-center position-absolute h-100 w-100">
@@ -206,7 +207,7 @@
                     </div>
                   </div>
                 </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
@@ -216,44 +217,16 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News</h2>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/orthez_google.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First news</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img/orthez_IGN.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second news</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img/orthez_OSM.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third news</h5>
-                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-              </div>
-            </div>
+
+	 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-5">Internship offers</h3>
+            <div class="subheading mb-3">Deep learning methods for crop type mapping on multi-modal satellite image time series - <a href="doc/Fiche_stage_VSFG_2020.pdf">Click here to see Internship Offer</a></div>
+<div class="subheading mb-3">Réseaux de Neurones Récurrents pour l'extraction de biomasse à partir d'imagerie satellite Optique/SAR - <a href="doc/Fiche_stage_AG_2020.pdf">Click here to see Internship Offer</a></div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+
+
+   
       </div>
     </section>
 
@@ -263,7 +236,7 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Vice-head of LASTIG lab</h3>
             <div class="subheading mb-3">LASTIG, IGN France</div>
@@ -272,9 +245,9 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2018 - Present</span>
           </div>
-        </div>
+        </div>-->
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+         <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Head of COGIT research team</h3>
             <div class="subheading mb-3">LASTIG, IGN France</div>
@@ -288,11 +261,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Senior researcher</h3>
-            <div class="subheading mb-3">COGIT, IGN France</div>
+            <div class="subheading mb-3">LASTIG-STRUDEL, IGN France</div>
             <p>Description...</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2011 - July 2017</span>
+            <span class="text-primary">2016 - Now</span>
           </div>
         </div>
 
@@ -317,7 +290,7 @@
               <span class="text-primary">September 2004 - December 2007</span>
             </div>
         </div>
-      </div>
+      </div>-->
 
     </section>
 
@@ -338,11 +311,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>10-09-2004</h4>
-                    <h4 class="subheading">Research assistant</h4>
+                    <h4>2005</h4>
+                    <h4 class="subheading">R&D Engineer at the IGN</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I start working at IGN France as a research assistant in the COGIT research team, assisting Cécile Duchêne and Anne Ruas on map generalisation.</p>
+                    <p class="text-muted">Software Developer on the IGN Orthophoto production line. Team Leader in charge of the Large Scale Photogrammetric Surveys (1/500 to 1/5000) – Production of large scale topographic databases and digital terrain models</p>
                   </div>
                 </div>
               </li>
@@ -352,11 +325,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>01-01-2008</h4>
-                    <h4 class="subheading">PhD student</h4>
+                    <h4>2010</h4>
+                    <h4 class="subheading">Teacher-Researcher</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My PhD, <a href="http://recherche.ign.fr/labos/cogit/pdf/THESES/TOUYA/theseTouya.pdf">obtained in June 2011</a>, was supervised by Cécile Duchêne and Anne Ruas, and dealt with collaborative map generalisation.</p>
+		     <p class="text-muted">Teacher-Researcher at the ENSG (Aerial and Spatial Imagery Department). Teaching : Image Processing and Remote Sensing. <a href="http://www.theses.fr/2015PESC1176">PhD Research</a>PhD<a href="http://www.theses.fr/2015PESC1176"> : Unmixing polarimetric radar images based on land cover type identified by higher-resolution optical data before target decomposition</p>
                   </div>
                 </div>
               </li>
