--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
 	 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-5">Internship offers</h3>
-            <div class="subheading mb-3">Deep learning methods for crop type mapping on multi-modal satellite image time series - <a href="doc/Fiche_stage_VSFG_2020.pdf">Click here to see Internship Offer</a></div>
+            <!--<div class="subheading mb-3">Deep learning methods for crop type mapping on multi-modal satellite image time series - <a href="doc/Fiche_stage_VSFG_2020.pdf">Click here to see Internship Offer</a></div>
 <div class="subheading mb-3">Réseaux de Neurones Récurrents pour l'extraction de biomasse à partir d'imagerie satellite Optique/SAR - <a href="doc/Fiche_stage_AG_2020.pdf">Click here to see Internship Offer</a></div>
-          </div>
+          </div>-->
 
 
    
