--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
           <a class="nav-link js-scroll-trigger lang-en" href="#about">About</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#about">Présentation</a>
         </li>
+	 <!-- no news currenltly 
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#news">News</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#news">Actualités</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger lang-en" href="#interest">Research Interests</a>
           <a class="nav-link js-scroll-trigger lang-fr" href="#interest">Sujets de recherche</a>
